# garnet

boards/: arm64_dummy.gni
go/src/amber/etc/sources/localhost/: config.json
lib/bluetooth/fidl/: BUILD.gn
lib/gzos/test/: BUILD.gn
lib/gzos/trusty_virtio/: BUILD.gn  remote_system_fake.cc  remote_system_fake.h  shared_mem.cc  shared_mem.h  trusty_virtio_device-unittest.cc  trusty_virtio_device.cc  trusty_virtio_device.h  virtio_device.cc  virtio_device.h  virtio_queue.cc  virtio_queue.h  virtio_queue_fake.cc  virtio_queue_fake.h  virtio_queue_waiter.cc  virtio_queue_waiter.h
lib/rust/crates/wlan-sme/src/: lib.rs
lib/trusty/: BUILD.gn  linux_fake.cc  linux_fake.h  shared_mem.cc  shared_mem.h  tipc_device-unittest.cc  tipc_device.cc  tipc_device.h  tipc_msg.h  tipc_remote_fake.cc  tipc_remote_fake.h  virtio_device.cc  virtio_device.h  virtio_queue.cc  virtio_queue.h  virtio_queue_fake.cc  virtio_queue_fake.h  virtio_queue_waiter.cc  virtio_queue_waiter.h
lib/vulkan/tests/unit/: test_swapchain.cc
manifest/: garnet  minimal  third_party
public/fidl/fuchsia.wlan.mlme/: BUILD.gn
public/fidl/gzos.ipc/: BUILD.gn  service_provider.fidl
public/fidl/gzos.ipc.test/: BUILD.gn  echo.fidl  vmo.fidl
public/fidl/gzos.reeagent/: BUILD.gn  ree_message.fidl
public/fidl/gzos.sysmgr/: BUILD.gn  service_registry.fidl
public/fidl/gzos.trusty.ipc/: BUILD.gn  channel.fidl  port.fidl
public/lib/fidl/cpp/bindings2/internal/: message_handler.cc
public/lib/fostr/fidl/fuchsia.netstack/: BUILD.gn
public/lib/gzos/client_app/cpp/: BUILD.gn  agent.cc  agent.h
public/lib/gzos/ree_agent/fidl/: BUILD.gn
public/lib/gzos/sysmgr/fidl/: BUILD.gn  service_provider.fidl  service_registry.fidl
public/lib/gzos/trusty_app/: BUILD.gn  manifest.cc  manifest.h  manifest_unittest.cc  trusty_ipc.cc  trusty_ipc.h  trusty_std.h  trusty_syscalls.cc  trusty_syscalls.h  trusty_unittest.h
public/lib/gzos/trusty_app/include/: BUILD.gn  trusty_ipc.h  trusty_syscalls.h  trusty_uuid.h
public/lib/gzos/trusty_app/include/lk/: list.h
public/lib/gzos/trusty_app/include/uapi/: err.h
public/lib/gzos/trusty_app/uapi/: mm.h
public/lib/gzos/trusty_ipc/cpp/: BUILD.gn  channel-unittest.cc  channel.cc  channel.h  id_alloc.h  msg_item.h  object-unittest.cc  object.cc  object.h  object_manager.cc  object_manager.h  object_set.cc  object_set.h  port-unittest.cc  port.cc  port.h
public/lib/gzos/trusty_ipc/fidl/: BUILD.gn  channel.fidl  port.fidl
public/lib/gzos/utils/cpp/: BUILD.gn  id_alloc.h
public/lib/ree_agent/cpp/: BUILD.gn  channel.cc  channel.h  id_alloc.h  msg_item.h  object.cc  object.h  object_manager.cc  object_manager.h  object_set.cc  object_set.h  port.cc  port.h
public/lib/ree_agent/fidl/: BUILD.gn  channel.fidl  port.fidl  ree_message.fidl  status.fidl
public/sdk/: BUILD.gn
