# Copyright 2017 The Fuchsia Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//build/package.gni")

shared_library("trusty") {
  sources = [
    "shared_mem.cc",
    "shared_mem.h",
    "tipc_device.cc",
    "tipc_device.h",
    "tipc_msg.h",
    "virtio_device.cc",
    "virtio_device.h",
    "virtio_queue.cc",
    "virtio_queue.h",
    "virtio_queue_waiter.cc",
    "virtio_queue_waiter.h",
  ]

  public_deps = [
    "//garnet/public/lib/app/cpp",
    "//zircon/public/lib/virtio",
    "//zircon/public/lib/zx",
  ]

  defines = [ "_ALL_SOURCE=1" ]

  deps = [
    "//garnet/public/lib/fsl",
    "//garnet/public/lib/fxl",
    "//zircon/public/lib/async-cpp",
    "//zircon/public/lib/zxcpp",
  ]

  # TODO(ZX-1411): Add visibility annotations to code and remove this.
  configs -= [ "//build/config:symbol_visibility_hidden" ]
}

executable("trusty_unittests") {
  testonly = true

  sources = [
    "tipc_remote_fake.cc",
    "tipc_remote_fake.h",
    "run_all_unittests.cc",
    "tipc_device-unittest.cc",
    "virtio_queue_fake.cc",
    "virtio_queue_fake.h"
  ]

  deps = [
    ":trusty",
    "//third_party/googletest:gtest",
    "//garnet/lib/magma/src/magma_util",
    "//zircon/public/lib/async-loop-cpp",
    "//zircon/public/lib/fbl",
  ]
}

package("trusty_tests") {
  testonly = true
  deprecated_system_image = true

  deps = [
    ":trusty_unittests",
  ]

  tests = [
    {
      name = "trusty_unittests"
    },
  ]
}
