# Copyright 2018 Open Trust Group
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//build/package.gni")

executable("gzos_unittests") {
  testonly = true
  output_name = "gzos_lib_unittests"

  sources = [
    "run_all_unittests.cc"
  ]

  deps = [
    "//third_party/googletest:gtest",
    "//garnet/lib/gzos/trusty_virtio:unittests",
    "//garnet/public/lib/gzos/trusty_ipc/cpp:unittests",
    "//garnet/public/lib/gzos/trusty_app:unittests",
  ]
}

package("gzos_lib_tests") {
  testonly = true
  deprecated_system_image = true

  deps = [
    ":gzos_unittests",
  ]

  tests = [
    {
      name = "gzos_lib_unittests"
    },
  ]
}
