# Copyright 2018 Open Trust Group
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

#import("//build/cpp/prebuilt_shared_library.gni")

source_set("trusty_app") {
  sources = [
    "manifest.h",
    "manifest.cc",
    "trusty_syscalls.cc",
  ]

  deps = [
    "//garnet/public/lib/component/cpp",
    "//third_party/rapidjson",
  ]

  public_deps = [
    "//garnet/public/lib/gzos/trusty_ipc/cpp",
  ]
}

source_set("unittests") {
  testonly = true
  sources = [
    "manifest_unittest.cc"
  ]

  deps = [
    ":trusty_app",
    "//third_party/googletest:gtest",
  ]
}

# TODO(james): Remove standard c++ library dependency.
#prebuilt_shared_library("trusty_app") {
#  category = "partner"
#  no_headers = true
#
#  public_deps = [
#    ":sources"
#  ]
#}
