# Copyright 2018 Open Trust Group
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

source_set("cpp") {
  sources = [
    "port.cc",
    "port.h",
  ]

  public_deps = [
    "//garnet/public/lib/app/cpp",
    "//garnet/public/lib/fxl",
    "//zircon/public/lib/fbl",
  ]
}
