# Copyright 2018 Open Trust Group
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

source_set("cpp") {
  sources = [
    "channel.cc",
    "channel.h",
    "object.cc",
    "object.h",
    "object_set.cc",
    "object_set.h",
    "object_manager.cc",
    "object_manager.h",
    "port.cc",
    "port.h",
    "msg_item.h",
  ]

  public_deps = [
    "//garnet/public/lib/app/cpp",
    "//garnet/public/lib/fxl",
    "//zircon/public/lib/async-cpp",
    "//zircon/public/lib/async-loop-cpp",
    "//zircon/public/lib/bitmap",
    "//zircon/public/lib/fbl",
  ]
}
